--- a/Pages/Users.cshtml
+++ b/Pages/Users.cshtml
@@ -4,7 +4,7 @@
 <h1>Utenti registrati:</h1>
 <hr>
 <ul>
-    @foreach (var item in Model.User)
+    @foreach (var item in Model.Utente)
     {
         //Qui mostro i campi del database
         <li>Cognome: @item.cognome</li>
