--- a/Pages/Users.cshtml
+++ b/Pages/Users.cshtml
@@ -1,13 +1,12 @@
 @page
 @using RazorPagingAdoNet.Models.ViewModels
-@model RazorPagingAdoNet.Models.ViewModels.CourseListViewModel
+@model RazorPagingAdoNet.Pages.UsersModel
 
 <h1>Utenti registrati:</h1>
 <hr>
 <ul>
-    @foreach (UserViewModel item in Model.Utenti.Results)
+    @foreach (UserViewModel item in Model.Utente.Results)
     {
-        //Qui mostro i campi del database
         <li>Cognome: @item.Cognome</li>
         <li>Nome: @item.Nome</li>
         <li>Email: @item.Email</li>
